# kaspalytics-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
cache/: Cargo.toml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/cmds/: daa.rs  hash_rate.rs  home_page.rs  mod.rs  price.rs
cli/src/cmds/blocks/: mod.rs  pipeline.rs  stats.rs
cli/src/cmds/utxo/: aging.rs  kas_bucket.rs  mod.rs  percentile.rs  pipeline.rs  realized_price.rs
cli/src/database/: initialize.rs  mod.rs  pg.rs
cli/src/kaspad/: db.rs
daemon/: Cargo.toml
daemon/src/: analyzer.rs  cache.rs  dag.rs  ingest.rs  listener.rs  main.rs  saver.rs  tx_counter.rs
daemon/src/analysis/: address_activity.rs  mining.rs  mod.rs  tx_counter.rs
daemon/src/analysis/transactions/: counter.rs  fees.rs  mod.rs
daemon/src/analysis/transactions/protocol/: inscription.rs  mod.rs
daemon/src/analyzer/: mining.rs  mod.rs  tx_counter.rs
daemon/src/cache/: dag.rs  mod.rs  model.rs  per_second.rs  second.rs
daemon/src/collector/: mod.rs
daemon/src/db/: reader.rs  writer.rs
daemon/src/ingest/: block_ingest.rs  block_writer.rs  cache.rs  listener.rs  mod.rs  model.rs  pipeline.rs  second.rs  vspc_ingest.rs  vspc_writer.rs
daemon/src/storage/: cache.rs  mod.rs
daemon/src/web/: cache.rs  handlers.rs  mod.rs
daemon/src/web/handlers/: address.rs  block.rs  blocks.rs  explorer.rs  home.rs  mod.rs  transaction.rs  visualizer.rs
daemon/src/web/handlers/address/: balance.rs  mod.rs  transaction_count_chart.rs  transactions.rs  utxos.rs
daemon/src/web/handlers/block/: hash.rs  mod.rs  oldest_timestamp.rs
daemon/src/web/handlers/lists/: active_addresses.rs  largest_fees.rs  largest_transactions.rs  mod.rs  protocol_activity.rs
daemon/src/web/handlers/transaction/: confirmations.rs  id.rs  mod.rs
daemon/src/writer/: insert.rs  mod.rs  model.rs
indexer/: Cargo.toml
indexer/src/: cache.rs  main.rs
migrations/: 20240702162006_database_init.sql  20250715170728_reset_kaspad.sql  20250715170728_spent_utxos.down.sql  20250715170728_spent_utxos.up.sql  20250820162351_up.sql  20250821141329_up.sql  20250821234250_up.sql  20251025110050_up.sql  20260221000001_remove_raw_storage.sql  20260308000001_realized_price_analysis.sql
src/: args.rs  cli.rs  dirs.rs  main.rs
src/cache/: cache.rs  mod.rs  models.rs
src/cmds/: daa.rs  mod.rs  price.rs
src/cmds/blocks/: analysis.rs  mod.rs  pipeline.rs  stats.rs
src/cmds/utxo/: aging.rs  analysis.rs  kas_bucket.rs  mod.rs  percentile.rs  pipeline.rs
src/cmds/utxo/address/: kas_bucket.rs  mod.rs  percentile.rs
src/database/: conn.rs  database.rs  initialize.rs  mod.rs  rdb.rs
src/kaspad/: db.rs  dirs.rs  mod.rs
src/service/: analysis.rs  blocks.rs  cache.rs  initial_sync.rs  mod.rs  models.rs  stats.rs  vspc.rs
src/utils/: config.rs  email.rs  mod.rs  price.rs
tests/: sse.py
utils/: Cargo.toml
utils/src/: coingecko.rs  config.rs  dirs.rs  email.rs  formatters.rs  granularity.rs  lib.rs  log.rs  math.rs
utils/src/database/: initialize.rs  mod.rs  pg.rs
utils/src/database/sql/: daa_snapshot.rs  hash_rate.rs  key_value.rs  mod.rs
utils/src/kaspad/: db.rs  dirs.rs
web-apis/: block.js  confirmation.js  explorer.js  largest_fees.js  largest_transactions.js  most_active_addresses.js  protocol_activity.js  transaction_count_chart.js
