[workspace]
resolver = "2"
members=[
    "cli", 
    "daemon",
    "utils",
]

[workspace.package]
rust-version = "1.84.0"
version = "0.1.0"
authors = ["smartgoo"]
repository = "https://github.com/smartgoo/kaspalytics"
edition = "2021"

[workspace.dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
crossbeam = "0.8.4"
ctrlc = "3.4.5"
dashmap = { version = "6.1.0", features = ["serde"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
duckdb = { version = "1.2.1", features = ["bundled", "chrono"] }
env_logger = "0.11.3"
kaspa-addresses = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspa-consensus = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspa-consensus-core = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspa-database = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspa-hashes = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspa-rpc-core = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspa-txscript = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspa-utils = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspa-utxoindex = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspa-wrpc-client = { git = "https://github.com/smartgoo/rusty-kaspa.git", branch = "kaspalytics-dev" }
kaspalytics-cache = { version = "0.1.0", path = "cache" }
kaspalytics-cli = { version = "0.1.0", path = "cli" }
kaspalytics-indexer = { version = "0.1.0", path = "indexer" }
kaspalytics-utils = { version = "0.1.0", path = "utils" }
lettre = "0.11.8"
log = "0.4"
log4rs = "1.3.0"
moka = { version = "0.5.4" }
reqwest =  { version = "0.12.12", features = ["json"] }
rlimit = "0.10.1"
rocksdb = "0.22.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = "1.0.204"
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = ["chrono", "rust_decimal", "runtime-tokio", "postgres"] }
sqlx-cli = { version = "0.5.2", default-features = false, features = ["postgres"] }
strum = "0.26.3"
strum_macros = "0.26.3"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
