[workspace]
resolver = "2"
members=[
    "cli", 
    "daemon",
    "utils",
]

[workspace.package]
rust-version = "1.84.0"
version = "0.1.0"
authors = ["smartgoo"]
repository = "https://github.com/smartgoo/kaspalytics"
edition = "2021"

[workspace.dependencies]
axum = "0.8.4"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
crossbeam = "0.8.4"
ctrlc = "3.4.5"
dashmap = { version = "6.1.0", features = ["serde"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
kaspa-addresses = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-consensus = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-consensus-core = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-database = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-grpc-client = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-hashes = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-rpc-core = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-txscript = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-utils = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-utxoindex = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspa-wrpc-client = { git = "https://github.com/smartgoo/rusty-kaspa.git", rev = "9b26529de7f31f64c41ed30346a477a42436ce4d" }
kaspalyticsd = { version = "0.1.0", path = "daemon" }
kaspalytics-cli = { version = "0.1.0", path = "cli" }
kaspalytics-utils = { version = "0.1.0", path = "utils" }
lettre = "0.11.8"
log = "0.4"
log4rs = "1.3.0"
reqwest =  { version = "0.12.12", features = ["json"] }
rlimit = "0.10.1"
rocksdb = "0.22.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = "1.0.204"
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = ["chrono", "rust_decimal", "runtime-tokio", "postgres"] }
sqlx-cli = { version = "0.5.2", default-features = false, features = ["postgres"] }
strum = "0.26.3"
strum_macros = "0.26.3"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = { version = "0.5.2", features = ["limit"] }
tower_governor = "0.7.0"
tower-http = { version = "0.6.4", features = ["cors", "limit", "sensitive-headers", "trace"] }
tracing = "0.1.41"
workflow-core = "0.18.0"
workflow-log = "0.18.0"