[package]
name = "kaspalyticsd"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
dashmap.workspace = true
env_logger.workspace = true
kaspa-hashes.workspace = true
kaspa-rpc-core.workspace = true
kaspa-wrpc-client.workspace = true
kaspalytics-utils.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true