[package]
name = "kaspalyticsd"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
bincode.workspace = true
chrono.workspace = true
dashmap.workspace = true
env_logger.workspace = true
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-hashes.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
kaspa-wrpc-client.workspace = true
kaspalytics-utils.workspace = true
log.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true