[package]
name = "kaspalyticsd"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
bincode.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-hashes.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
kaspa-wrpc-client.workspace = true
kaspalytics-utils.workspace = true
log.workspace = true
moka.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tracing.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true