[package]
name = "kaspalytics-utils"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
dirs.workspace = true
dotenvy.workspace = true
kaspa-consensus.workspace = true
kaspa-consensus-core.workspace = true
kaspa-database.workspace = true
kaspa-rpc-core.workspace = true
kaspa-utils.workspace = true
lettre.workspace = true
log.workspace = true
log4rs.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
sqlx.workspace = true
strum.workspace = true
strum_macros.workspace = true
